...
                                                <constraint firstAttribute="bottom" secondItem="G9L-n1-qRN" secondAttribute="bottom" constant="8" id="cNf-0v-9ru"/>
                                            </constraints>
                                        </view>
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1HV-nD-stn">
                                            <rect key="frame" x="0.0" y="441" width="414" height="60"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comics collection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7p-l6-1Hq">
                                                    <rect key="frame" x="24" y="0.0" width="374" height="60"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                    <color key="textColor" name="Jet"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                                                <constraint firstItem="Nac-yR-xrU" firstAttribute="top" secondItem="w9N-mY-Vak" secondAttribute="top" id="KpY-40-bXC"/>
                                            </constraints>
                                        </view>
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fg0-3F-5Ij">
                                            <rect key="frame" x="0.0" y="767" width="414" height="60"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Series" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bde-GN-G3E">
                                                    <rect key="frame" x="24" y="0.0" width="374" height="60"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                    <color key="textColor" name="Jet"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                                                <constraint firstItem="RuB-g3-3UW" firstAttribute="top" secondItem="64B-wt-Ptg" secondAttribute="top" id="wjO-af-iAz"/>
                                            </constraints>
                                        </view>
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iT2-av-fBf">
                                            <rect key="frame" x="0.0" y="1093" width="414" height="60"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjm-vU-Xif">
                                                    <rect key="frame" x="24" y="0.0" width="374" height="60"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                    <color key="textColor" name="Jet"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
