...
import Foundation
import Alamofire

extension ApiMarvel {
    
    /**
     Character
     
     Detail of comic character.

     How to use?
     =======================
     https://developer.marvel.com/docs#!/public/getCreatorCollection_get_1
...
