...
                        series: series,
                        stories: stories
                    )
                )
                
            case .failure(_):
                view.showMessage(title: "Something bad happened", text: "Never miss an error message.", buttonTitle: "Back") {
                    self.backDismissNavigation()
                }
            }
        }
    }
    
...
